# team-yap

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
agents/: THREAD_CONTEXT_AUDITOR.md
backend/: Dockerfile
backend/team_yap/: config.py  db.py  main.py  manage.py  runserver.py  schema.sql  security.py
desktop/app/: app.js  index.html  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/permissions/: default.toml
desktop/src-tauri/src/: main.rs
docs/: CHECKPOINT_HISTORY.md  DEPLOY_PROXMOX.md  INSTALL_DESKTOP.md  OPERATIONS.md  PROGRESS.md
scripts/: bootstrap-client-macos.sh  bootstrap-client-windows.ps1  bootstrap-server-debian.sh  generate_desktop_icons.py  uninstall-client-macos.sh  uninstall-client-windows.ps1  uninstall-server-debian.sh
