[package]
name = "team-yap-desktop"
version = "0.1.0"
description = "Team Yap desktop client"
authors = ["Team Yap"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

